ckanext/tess/public/workflows-cytoscape.css
/* navigation */
ul.nav-tabs-cy {
    width: 140px;
    margin-top: 20px;
    border-radius: 4px;
    border: 1px solid #ddd;
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
    z-index: 5;
    float: left;
}
ul.nav-tabs-cy li {
    margin: 0;
    border-top: 1px solid #ddd;
}
ul.nav-tabs-cy li:first-child {
    border-top: none;
}
ul.nav-tabs-cy li a {
    margin: 0;
    padding: 8px 16px;
    border-radius: 0;
}
ul.nav-tabs-cy li.active a, ul.nav-tabs-cy li.active a:hover {
    color: #fff;
    background: #0088cc;
    border: 1px solid #0088cc;
}
ul.nav-tabs-cy li:first-child a {
    border-radius: 4px 4px 0 0;
}
ul.nav-tabs-cy li:last-child a {
    border-radius: 0 0 4px 4px;
}
ul.nav-tabs-cy.affix {
    top: 30px; /* Set the top position of pinned element */
}

/* defaults */
i {
    font-size: 1.5em;
}
/* cytoscape graph */
.cy {
    height: 900px;
    width: 900px;
    background-color: #f9f9f9;
    right: auto;
}

.cy-overall-toolbar {
    float:left;
    z-index: 3;
}

